updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a wanna be software developer</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I am from Magnolia, a suburb of Seattle</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Sports, cooking, hiking and hanging with my dogs</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Owning a restaurant</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Europe</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I want to diversify my skillset</p>
     </section>
 
     <footer id="footer">
